Mior fixex to alignments and css

--- a/upc-website/Content/site2.css
+++ b/upc-website/Content/site2.css
@@ -1,4 +1,4 @@
-﻿/*****************This section is for carousel*********************************************/
+﻿/***************** This section is for carousel *********************************************/
 /* Makes images fully responsive for carousel */
 .img-responsive,
 .thumbnail > img,
@@ -15,7 +15,7 @@
   height: auto;
   margin-bottom: 15px;
   width:70%;
-  margin:-84px auto 0;
+  margin:-136px auto 0;
  }
 .carousel-inner {
   border-radius: 15px;
@@ -64,9 +64,23 @@ body {
 
     /* ------------------- Section Styling - For navbar-brand  ------------------- */
 .navbar {
-    min-height: 100px;
+    height: 70px;
     background-color:rgba(0, 21, 64, 1);
-    padding: 30px;
+    padding-top: 8px;
+    padding-bottom:15px;
+    border: 3px solid;
+    border-bottom-color:rgba(130,105,30,1);
+
+}
+
+.navbar-fixed-top {
+    top: 0;
+    /*border-width: 0 0 1px;*/
+    border-top-width: 0px;
+    border-right-width: 0px;
+    /*border-bottom-width: 5px;*/
+    border-left-width: 0px;
+    
 }
 
 .navbar-inverse .navbar-nav > li > a {
@@ -74,11 +88,11 @@ body {
 }
 
 .navbar-brand {
-   /* margin-left: 50px;*/
+   /* margin-left: 50px;
 }
     .navbar-brand > img {
         position:relative;
-       margin-top:-41px;
+        margin-top:-20px;
         /* left: 10px;
         top: 10px;
         height: 90%;
@@ -109,9 +123,9 @@ body {
             width:100%
         }
 }
-/*****************End of carousel*********************************************/
+/***************** End of carousel*********************************************/
 
-/*****************This displays glyphicons properly***************************/
+/***************** This displays glyphicons properly***************************/
 .col-lg-4, .col-md-6, .col-sm-6, .col-xs-6, span {
     display:block;
     text-align:center;
@@ -130,12 +144,28 @@ h2 {
     display: inline;
 }
 
-p {/**Adjust glythicon vertical spacing first 2 settings below**/
+ .gly-paragraph {*Adjust glythicon vertical spacing first 2 settings below*
     -webkit-margin-before: 0em;
     -webkit-margin-after: 1em;
     -webkit-margin-start: 0px;
     -webkit-margin-end: 0px;
     color:#fff;
 }
-   
-/*****************End of glyphicons ******************************************/
+ /***************** End of glyphicons ******************************************/
+
+ /***************** footer styling ******************************************/
+ .center-block {
+    display: block;
+    margin-right: auto;
+    margin-left: auto;
+    background-color:rgba(93, 80, 50, 1);
+    border-radius: 15px;
+}
+ /***************** end of footer styling ******************************************/  
+ .social-icons {
+     padding:10px 0;
+ }
+
+ #footer-date {
+     color:white;
+ }
